<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="@dimen/_160sdp"
    android:layout_marginStart="@dimen/layout_margin2"
    android:layout_marginTop="@dimen/layout_margin2"
    android:layout_marginEnd="@dimen/layout_margin2"
    app:cardCornerRadius="@dimen/small_corner_radius"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:padding="@dimen/layout_margin2"
            android:text="@string/apakah_kamu_yakin_ingin_menghapus_riwayat_mu"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDeleteItem"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin2"
                android:layout_weight="1"
                android:text="@string/hapus" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/ButtonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin2"
                android:layout_weight="1"
                android:text="@string/tidak" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>