<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin2"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin2"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawablePadding="@dimen/layout_margin3"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textSize="@dimen/_16ssp" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonPrimary"
            android:id="@+id/mbClearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin2"
            android:layout_alignParentEnd="true"
            android:text="@string/clear" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBack"
            android:layout_marginHorizontal="@dimen/layout_margin2"
            android:layout_marginVertical="@dimen/layout_margin2"
            android:text="@string/riwayat_diagnosa"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHistoryDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_diagnosis_history" />

                <LinearLayout
                    android:id="@+id/llNoHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_history" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/layout_margin2"
                        android:text="@string/oops_anda_belum_memiliki_riwayat_diagnosa"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>