<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="prediction"
            type="com.kelompoksatu.sistempakardurian.data.model.Diagnosis" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin2"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin2"
            android:drawableStart="@drawable/ic_baseline_arrow_back_24"
            android:drawablePadding="@dimen/layout_margin3"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textSize="@dimen/_16ssp" />

        <RelativeLayout
            android:id="@+id/rlTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBack"
            android:layout_marginHorizontal="@dimen/layout_margin2"
            android:layout_marginTop="@dimen/layout_margin3">

            <com.google.android.material.textview.MaterialTextView
                style="@style/headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:layout_centerVertical="true"
                android:text="@string/pilih_gejala_penyakit"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbReset"
                style="@style/ButtonPrimaryShortest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="@dimen/layout_margin3"
                android:text="@string/reset" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rlBottom"
            android:layout_below="@id/rlTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="@dimen/layout_margin2"
                    android:layout_marginVertical="@dimen/layout_margin3"
                    android:background="@color/gray" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSymptomp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_symptomps" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbDiagnosis"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin2"
                android:elevation="10dp"
                android:text="@string/diagnosa" />
        </RelativeLayout>
    </RelativeLayout>
</layout>