<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:text="@string/beranda"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvDiagnosisHama"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin2">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/diagnosa_hama"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_baseline_arrow_forward_24" />
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvDiagnosisPenyakit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/layout_margin3"
                android:layout_marginBottom="@dimen/_8sdp"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin2">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/diagnosa_penyakit"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_baseline_arrow_forward_24" />
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvRiwayatDiagnosis"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:layout_marginTop="@dimen/layout_margin3"
                android:layout_marginBottom="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin2">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/riwayat_diagnosa"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_baseline_arrow_forward_24" />
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvInformasiHamaDurian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/layout_margin3"
                android:layout_marginBottom="@dimen/_8sdp"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin2">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/informasi_hama_durian"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_baseline_arrow_forward_24" />
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcvInformasiPenyakitDurian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/layout_margin3"
                android:layout_marginHorizontal="@dimen/layout_margin2"
                android:layout_marginBottom="@dimen/_50sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_margin2">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/subtitle1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/informasi_penyakit_durian"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_baseline_arrow_forward_24" />
                    </LinearLayout>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>